GNOME Bugzilla – Bug 778076
avwait: Fix potential deadlock when flushing / shutting down audio
Last modified: 2017-02-02 13:30:19 UTC
The mutex must be unlocked in the error case
Created attachment 344773 [details] [review] 0001-avwait-Fix-potential-deadlock-when-flushing-shutting.patch
commit a5933dc002beaa33a55a0201ccba7e76bd58de25 Author: Vivia Nikolaidou <vivia@toolsonair.com> Date: Thu Feb 2 15:25:09 2017 +0200 avwait: Fix potential deadlock when flushing / shutting down audio The mutex must be unlocked in the error case https://bugzilla.gnome.org/show_bug.cgi?id=778076