avwait: Fix potential deadlock when flushing / shutting down audio

The mutex must be unlocked in the error case

https://bugzilla.gnome.org/show_bug.cgi?id=778076